feat: Enhance service configurations and security setup
- Added Spring Boot actuator dependency to `config-service` for monitoring.
- Updated `api-gateway` routes: refined paths for `auth-service`, added `StripPrefix` filters.
- Enabled Eureka registry fetching in various services (`discovery-service`, `config-service`).
- Improved `auth-service` security: modularized filters, added unauthorized entry point, and introduced `AuthorizationServerSettings`.
- Enhanced CORS policies across `auth-service` and `api-gateway` with extended configurations.
- Synchronized issuer URIs and logging enhancements for debugging in local environments.